<resources>
    <string name="app_name">Lanzoom</string>
    <string name="ChatFragment">Chat</string>
    <string name="MianpostFragment">MainPost</string>
    <string name="GroupsFragment">Groups</string>
    <string name="WelcomeMain">-Welcome You-</string>
    <string name="Activity_phone_login_Enter">Enter Your Number To Register</string>
    <string name="Activity_phone_login_next">Continue</string>
    <string name="Activity_Verify_Phone_SignIn">Sign in</string>
    <string name="Activity_Verify_phone_TextVerify">Verifying your number</string>
    <string name="Activity_Verify_phone_TextChange">Change</string>
    <string name="Activity_verify_phone_TextN">"We have sent an OTP on your number"</string>
    <string name="Upload_profileimage_uploadphoto">Upload Profile Photo</string>
    <string name="addcover_photo_uploadphoto">Add Cover Photo</string>
    <string name="ignore_uploadphoto">ignore</string>
    <string name="Signout_navigation_main">Sign Out</string>
    <string name="Profile_navigation_main">View Profile</string>
    <string name="Requests_navigation_main">Requests</string>
    <string name="SentRequests_navigation_main">Sent Requests</string>
    <string name="Settings_navigation_main">Settings</string>
    <string name="barDrawerToggle_open">Open</string>
    <string name="barDrawerToggle_Close">Close</string>
    <string name="Connect_findfriends">Connect with new friends</string>
    <string name="Stateappearance_navigation_main">State of appearance</string>
    <string name="Profile_personly_Userprofile">Profile</string>
    <string name="FriendRequest_userprofile">Friend request</string>
    <string name="AcceptRequest_userprofile">Accept request</string>
    <string name="CancelRequest_userprofile">Cancel request</string>
    <string name="Removethecontant_UserProfile">Remove the contant</string>
    <string name="Removethecontact_UserProfile">Remove the contact</string>
    <string name="personal_information_userprofile">personal information</string>
    <string name="Friends_UserProfile">Friends</string>
    <string name="Chating_MenuContants">Chating</string>
    <string name="Profile_MenuContants">Profile</string>
    <string name="Remove_MenuContants">Remove the contant</string>
    <string name="Block_MenuContants">Block</string>
    <string name="Request_Text_RequstesActivity">Requests</string>
    <string name="ReceivedRequests_RequestActivity">Received requests</string>
    <string name="SentRequests_SentActivity">Sent requests</string>
    <string name="Added_successfully_Requests">Added successfully</string>
    <string name="Delete_successfully_Requests">Delete successfully</string>
    <string name="Successfullycanceled_Requests">Successfully canceled</string>
    <string name="Block_menuReport">Block</string>
    <string name="unBlock_menuReport">Unblock</string>
    <string name="Report_menuReport">Report</string>
    <string name="Userhasbeenbanned_menuReport">User has been banned</string>
    <string name="Dangerhasbeenremoved_menuReport">Danger has been removed</string>
    <string name="block_UserProfile">Block</string>
    <string name="Cancel_UserProfile">Cancel</string>
    <string name="BlockUsers_UserProfile">Block Users</string>
    <string name="Incase_UserProfile">In case of deletion, all friendship requests will be deleted It was not possible to send any requests in the future as long as the ban was in effect</string>
    <string name="Text_Groups">Public groups</string>
    <string name="Ban_HeaderUsers">Ban messages</string>
    <string name="Profile_HeaderUsers">Profile</string>
    <string name="Unbanning_HeaderUsers">Unbanning</string>
    <string name="View_Profile_Snakbar">View</string>
    <string name="frist_write_ChatingRoom">frist write your message..</string>
    <string name="deleted_ChatingRoom">Delete</string>
    <string name="deletedToast_ChatingRoom">Message has been deleted</string>
    <string name="deletedaccount">هذه العملية حساسة وتتطلب تسجيل دخول حديثًا مرة أخرى قبل إعادة محاولة هذا الطلب</string>


</resources>
