<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#B5E2D5D5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPhone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <TextView
               android:id="@+id/maincastup"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               android:textColor="#FFF"
               android:layout_centerInParent="true"
               android:text="@string/app_name"
               android:fontFamily="@font/main_font1"
               android:textSize="55sp"/>

           <TextView
               android:layout_below="@id/maincastup"
               android:layout_width="match_parent"
               android:layout_marginHorizontal="110dp"
               android:layout_height="2dp"
               android:background="#fff"/>
       </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/WelcomeMain"
        android:fontFamily="@font/new_font"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/lineander"
        android:layout_below="@id/welcome"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:layout_height="2dp"
        android:background="#A29D9D"/>


        <TextView
            android:id="@+id/VerifyText"
            android:layout_below="@id/appbar"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/new_font"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:visibility="gone"
            android:textColor="#000"
            android:text="@string/Activity_Verify_phone_TextVerify"/>

        <TextView
            android:id="@+id/TN"
            android:layout_below="@id/VerifyText"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/new_font"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="18sp"
            android:text="@string/Activity_verify_phone_TextN"/>

        <TextView
            android:id="@+id/TextNumber"
            android:layout_below="@id/TN"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/new_font"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text=""/>

        <TextView
            android:id="@+id/ChangeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/TextNumber"
            android:visibility="gone"
            android:fontFamily="@font/new_font"
            android:text="@string/Activity_Verify_phone_TextChange"
            android:textColor="#1045D6"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/VerifyNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginHorizontal="70dp"
            android:layout_below="@id/TextNumber"
            android:layout_marginTop="100dp"
            android:padding="8dp"
            android:maxLength="12"
            android:gravity="top|left"
            android:textSize="16sp"
            android:singleLine="true"/>

        <Button
            android:id="@+id/SignIn"
            android:layout_below="@+id/VerifyNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="30dp"
            android:layout_width="170dp"
            android:visibility="gone"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:fontFamily="@font/new_font"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:background="@drawable/loginbutton"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/Activity_Verify_Phone_SignIn" />


        <TextView
        android:id="@+id/enter"
        android:layout_below="@id/lineander"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/new_font"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/Activity_phone_login_Enter"/>

    <Spinner
        android:id="@+id/CodePhone"
        android:layout_below="@+id/enter"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:singleLine="true"
        android:background="@drawable/edittext_phonelogin"
        android:layout_marginHorizontal="60dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="33dp" />

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_below="@id/CodePhone"
        android:layout_marginTop="50dp"
        android:padding="8dp"
        android:maxLength="12"
        android:background="@null"
        android:gravity="top|left"
        android:hint="Phone Number"
        android:textSize="16sp"
        android:inputType="phone"
        android:singleLine="true"/>

     <TextView
          android:layout_below="@id/PhoneNumber"
          android:layout_width="match_parent"
          android:layout_marginTop="-3dp"
          android:layout_marginHorizontal="70dp"
          android:layout_height="2dp"
          android:background="#FFAB00"/>

    <Button
        android:id="@+id/SentNumber"
        android:layout_below="@+id/PhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="30dp"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:textAllCaps="false"
        android:fontFamily="@font/new_font"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:background="@drawable/loginbutton"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/Activity_phone_login_next" />

    </RelativeLayout>
</ScrollView>