<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    tools:context=".UploadPhoto">


    <ImageView
        android:id="@+id/CoverPhoto"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="2dp"
        android:background="@drawable/s_cover"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/Back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/CoverPhoto"
        android:background="#B5E2D5D5"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/Addcoverphoto"
        android:layout_alignTop="@+id/profileImage"
        android:layout_marginTop="-80dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addcover_photo_uploadphoto"
        android:fontFamily="@font/new_font"
        android:textStyle="italic"
        android:textSize="15sp"
        android:textColor="#FFFFFF"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_below="@+id/CoverPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-85dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="#fff"
        app:civ_border_width="3dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/UplaodprofileImage_Camera"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_toEndOf="@+id/profileImage"
        app:civ_fill_color="#F3F1F1"
        app:civ_border_color="#fff"
        app:civ_border_width="3dp"
        android:padding="3dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="-60dp"
        android:src="@drawable/ic_photo_camera"
        android:layout_below="@id/CoverPhoto" />

    <ImageButton
        android:id="@+id/image_Button_Cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_photo_camera_cover"
        android:layout_alignEnd="@id/CoverPhoto"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"/>

    <TextView
        android:id="@+id/text_uplaodphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Upload_profileimage_uploadphoto"
        android:textSize="19sp"
        android:fontFamily="@font/new_font"
        android:textColor="#585858" />


    <ImageButton
        android:id="@+id/image_Button_profile"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/uploadprofilephoto"
        android:src="@drawable/ic_photo_camera_profile"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingEnd="5dp"
        android:layout_below="@id/text_uplaodphoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/UserUploadPhoto_FloatingActionBtn"
        android:src="@drawable/ic_tick_icon"
        android:background="@color/colorPrimary"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="gone"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/UserUploadPhoto_TEXT"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/ignore_uploadphoto"
        android:fontFamily="@font/new_font"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>